--- a/index.html
+++ b/index.html
@@ -958,98 +958,140 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--accent-purple);
   text-decoration: underline;
 }
-/* ===== Contact Two-Column Layout (cards left, form right) ===== */
-.contact-two-col{
-  display:grid;
-  grid-template-columns: 1fr 1.2fr; /* LHS cards, RHS form */
-  gap:2rem;
-  align-items:start;
-  max-width:1000px;
-  margin:0 auto;
+/* ================= Enhanced Contact Form Styles ================= */
+.contact-two-col {
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+  gap: 2rem;
+  align-items: start;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-/* stack the three cards vertically on the left */
-.contact-grid.vertical{
-  display:flex;
-  flex-direction:column;
-  gap:1.25rem;
-  max-width:none;
-  margin:0;
+.contact-grid.vertical {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  max-width: none;
+  margin: 0;
 }
 
-/* contact form card styles */
-.contact-form.card{
-  padding:2rem;
+.contact-form.card {
+  padding: 2rem;
 }
-.form-group{
-  display:flex;
-  flex-direction:column;
-  gap:.5rem;
-  margin-bottom:1rem;
-}
-.form-label{
-  font-weight:600;
-  color:var(--text-secondary);
-  font-size:.95rem;
-}
-.input, .textarea{
-  width:100%;
-  padding:14px 16px;
-  border-radius:var(--radius);
-  border:1px solid var(--border-color);
-  background:var(--bg-card);
-  color:var(--text-primary);
-  outline:none;
-  transition:border-color var(--transition-base), box-shadow var(--transition-base);
-}
-.input::placeholder, .textarea::placeholder{ color:var(--text-muted); }
-.input:focus, .textarea:focus{
-  border-color:var(--border-hover);
-  box-shadow:0 0 0 4px rgba(124,58,237,.15);
-}
-.textarea{ min-height:160px; resize:vertical; }
 
-/* submit button matches your primary button */
-.btn-submit{
-  width:100%;
-  padding:16px 20px;
-  border:none;
-  border-radius:999px;
-  background:var(--gradient-primary);
-  color:#fff;
-  font-weight:700;
-  cursor:pointer;
-  transition:transform var(--transition-base), box-shadow var(--transition-base);
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 1.5rem;
 }
-.btn-submit:hover{ transform:translateY(-2px); box-shadow:var(--shadow-lg); }
 
-/* success/error note */
-.form-note{
-  margin-top:.75rem;
-  font-size:.95rem;
-  color:var(--text-secondary);
+.form-label {
+  font-weight: 600;
+  color: var(--text-secondary);
+  font-size: 0.95rem;
 }
-/* Form validation styles */
-.form-error {
-  font-size: 0.85rem;
+
+.input, .textarea {
+  width: 100%;
+  padding: 14px 16px;
+  border-radius: var(--radius);
+  border: 2px solid var(--border-color);
+  background: var(--bg-card);
+  color: var(--text-primary);
+  outline: none;
+  transition: all var(--transition-base);
+  font-family: inherit;
+  font-size: 0.95rem;
+}
+
+.input::placeholder, .textarea::placeholder {
+  color: var(--text-muted);
+}
+
+.input:focus, .textarea:focus {
+  border-color: var(--primary-purple);
+  box-shadow: 0 0 0 4px rgba(124, 58, 237, 0.15);
+}
+
+.textarea {
+  min-height: 120px;
+  resize: vertical;
+  font-family: inherit;
+  line-height: 1.5;
+}
+
+.char-counter {
+  font-size: 0.8rem;
+  color: var(--text-muted);
+  text-align: right;
+  margin-top: -0.25rem;
+}
+
+.char-counter.warning {
+  color: #f59e0b;
+}
+
+.char-counter.danger {
   color: #ef4444;
-  margin-top: 0.25rem;
-  display: none;
 }
 
-.form-error.visible {
-  display: block;
+.btn-submit {
+  width: 100%;
+  padding: 16px 20px;
+  border: none;
+  border-radius: var(--radius);
+  background: var(--gradient-primary);
+  color: #fff;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all var(--transition-base);
+  position: relative;
+  overflow: hidden;
 }
 
-.input.error, .textarea.error {
-  border-color: #ef4444;
-  box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.1);
+.btn-submit::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.5s ease;
+}
+
+.btn-submit:hover::before {
+  width: 300px;
+  height: 300px;
+}
+
+.btn-submit:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 8px 25px rgba(124, 58, 237, 0.4);
+}
+
+.btn-submit:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+  transform: none;
+}
+
+.btn-submit:disabled:hover {
+  transform: none;
+  box-shadow: none;
 }
 
 .btn-loader {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   gap: 8px;
+  position: relative;
+  z-index: 1;
 }
 
 .spinner {
@@ -1061,14 +1103,81 @@ h1, h2, h3, h4, h5, h6 {
   animation: spin 1s linear infinite;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.form-error {
+  font-size: 0.85rem;
+  color: #ef4444;
+  margin-top: 0.25rem;
+  display: none;
+  font-weight: 500;
 }
 
-/* responsive */
-@media (max-width: 900px){
-  .contact-two-col{ grid-template-columns:1fr; }
+.form-error.visible {
+  display: block;
+}
+
+.input.error, .textarea.error {
+  border-color: #ef4444;
+  box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.1);
+}
+
+.form-note {
+  margin-top: 1rem;
+  padding: 12px 16px;
+  border-radius: var(--radius);
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-align: center;
+  display: none;
+}
+
+.form-note.success {
+  background: rgba(34, 197, 94, 0.1);
+  border: 1px solid #22c55e;
+  color: #166534;
+  display: block;
+}
+
+.form-note.error {
+  background: rgba(239, 68, 68, 0.1);
+  border: 1px solid #ef4444;
+  color: #dc2626;
+  display: block;
+}
+
+.form-note.info {
+  background: rgba(59, 130, 246, 0.1);
+  border: 1px solid #3b82f6;
+  color: #1d4ed8;
+  display: block;
+}
+
+.session-limit-notice {
+  margin-top: 1rem;
+  padding: 12px 16px;
+  background: rgba(251, 191, 36, 0.1);
+  border: 1px solid #fbbf24;
+  color: #92400e;
+  border-radius: var(--radius);
+  font-size: 0.9rem;
+  text-align: center;
+}
+
+/* Responsive */
+@media (max-width: 900px) {
+  .contact-two-col {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .contact-form.card {
+    padding: 1.5rem;
+  }
+  
+  .form-group {
+    margin-bottom: 1.25rem;
+  }
 }
 
 /* ================= Sections ================= */
@@ -3085,38 +3194,48 @@ section {
         <h3 class="contact-label" style="margin-bottom:1.5rem; font-size:1.3rem; color:var(--text-primary);">Send a Message</h3>
 
         <form id="contactForm" action="https://formspree.io/f/xpwaqjro" method="POST" novalidate>
+          <!-- Honeypot for spam protection -->
+          <input type="text" name="_gotcha" style="display:none !important">
+          
+          <!-- Hidden fields for better email formatting -->
+          <input type="hidden" name="_subject" value="New Portfolio Contact Form Submission">
+          <input type="hidden" name="_template" value="table">
+
           <div class="form-group">
-            <label class="form-label" for="name">Your Name</label>
-            <input class="input" id="name" name="name" type="text" placeholder="Enter your full name" required minlength="2" />
+            <label class="form-label" for="name">Your Name *</label>
+            <input class="input" id="name" name="name" type="text" placeholder="Enter your full name" required minlength="2" maxlength="100" />
             <div class="form-error" id="nameError"></div>
           </div>
 
           <div class="form-group">
-            <label class="form-label" for="email">Your Email</label>
-            <input class="input" id="email" name="email" type="email" placeholder="your.email@example.com" required />
+            <label class="form-label" for="email">Your Email *</label>
+            <input class="input" id="email" name="email" type="email" placeholder="your.email@example.com" required maxlength="100" />
             <div class="form-error" id="emailError"></div>
           </div>
 
           <div class="form-group">
-            <label class="form-label" for="subject">Subject</label>
-            <input class="input" id="subject" name="subject" type="text" placeholder="What's this about?" required minlength="3" />
+            <label class="form-label" for="subject">Subject *</label>
+            <input class="input" id="subject" name="subject" type="text" placeholder="What's this about?" required minlength="3" maxlength="150" />
             <div class="form-error" id="subjectError"></div>
           </div>
 
           <div class="form-group">
-            <label class="form-label" for="message">Your Message</label>
-            <textarea class="textarea" id="message" name="message" placeholder="Tell me about your project or opportunity..." required minlength="10"></textarea>
+            <label class="form-label" for="message">Your Message *</label>
+            <textarea class="textarea" id="message" name="message" placeholder="Tell me about your project or opportunity..." required minlength="10" maxlength="2000"></textarea>
             <div class="form-error" id="messageError"></div>
+            <div class="char-counter" id="charCounter">0 / 2000 characters</div>
           </div>
 
           <button type="submit" class="btn-submit" id="submitBtn">
             <span id="submitText">Send Message</span>
             <div class="btn-loader" id="btnLoader" style="display: none;">
               <div class="spinner"></div>
+              <span>Sending...</span>
             </div>
           </button>
           
           <div id="formNote" class="form-note" aria-live="polite"></div>
+          <div id="sessionLimit" class="session-limit-notice" style="display: none;"></div>
         </form>
 
         <!-- Fallback -->
