updated project links v2

--- a/index.html
+++ b/index.html
@@ -670,8 +670,8 @@ section{padding:6rem 0;position:relative}
                 <span class="tech-tag">Python</span><span class="tech-tag">Pandas</span><span class="tech-tag">Matplotlib</span><span class="tech-tag">Data Viz</span><span class="tech-tag">Urban Analytics</span>
               </div>
               <div class="project-links">
-                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m7-5l5 5m0 0l5-5m-5 5V3"/></svg><span>Analysis</span></a>
-                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/></svg><span>GitHub</span></a>
+                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="https://github.com/walia-sahil/Property-Maintenance-Trends-in-Phoenix/blob/ffbae6768a13b7f30b8b53761052378f12c5556e/Property-Maintenance-Trends-in-Phoenix-Analysis.ipynb"/></svg><span>Analysis</span></a>
+                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="https://github.com/walia-sahil/Property-Maintenance-Trends-in-Phoenix"/></svg><span>GitHub</span></a>
               </div>
             </div>
           </article>
@@ -695,8 +695,8 @@ section{padding:6rem 0;position:relative}
                 <span class="tech-tag">Market Research</span><span class="tech-tag">Competitive Analysis</span><span class="tech-tag">Business Planning</span>
               </div>
               <div class="project-links">
-                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/></svg><span>Report</span></a>
-                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16v16H4z"/><path d="M8 8h8M8 12h8M8 16h8"/></svg><span>Analysis</span></a>
+                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="https://github.com/walia-sahil/Zudio-Marketing-Analysis/blob/main/Zudio_marketing_analysis.pdf"/></svg><span>Presentation</span></a>
+                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16v16H4z"/><path d="https://github.com/walia-sahil/Zudio-Marketing-Analysis"/></svg><span>GitHub</span></a>
               </div>
             </div>
           </article>
@@ -720,8 +720,8 @@ section{padding:6rem 0;position:relative}
                 <span class="tech-tag">Computer Vision</span><span class="tech-tag">Python</span><span class="tech-tag">Image Processing</span><span class="tech-tag">Data Analysis</span>
               </div>
               <div class="project-links">
-                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m7-5l5 5m0 0l5-5m-5 5V3"/></svg><span>View</span></a>
-                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/></svg><span>GitHub</span></a>
+                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="https://github.com/walia-sahil/CV-Based-Parking-Solution/blob/2dad89f265a0d1a1941fbfe424ae6d9735b0619b/Team312_CV_Based_Parking_Monitoring_Solution_discussion.pdf"/></svg><span>Presentation</span></a>
+                <a href="#" class="project-link"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="https://github.com/walia-sahil/CV-Based-Parking-Solution"/></svg><span>GitHub</span></a>
               </div>
             </div>
           </article>
@@ -1193,7 +1193,7 @@ section{padding:6rem 0;position:relative}
           </div>
           <div class="contact-info-modern">
             <h3 class="contact-label-modern">GitHub</h3>
-            <a href="https://github.com/sahilwalia15" target="_blank" rel="noopener noreferrer" class="contact-link-modern">github.com/sahilwalia15</a>
+            <a href="github.com/walia-sahil" target="_blank" rel="noopener noreferrer" class="contact-link-modern">github.com/walia-sahil</a>
           </div>
         </div>
 
