--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ section{padding:6rem 0;position:relative}
             <div class="project-header">
               <span class="project-badge">Capstone</span>
               <div class="project-icon">🤖</div>
-              <h3 class="project-title">Harley‑Davidson Capstone — AI Sentiment Analyzer</h3>
+              <h3 class="project-title">Capstone — AI Sentiment Analyzer</h3>
               <div class="project-type">ASU Capstone • NLP Analytics</div>
             </div>
             <div class="project-content">
