--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@ section{padding:6rem 0;position:relative}
   }
   
   .contact-cards-modern {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 1rem;
   }
 }
@@ -481,6 +481,7 @@ section{padding:6rem 0;position:relative}
 @media (max-width: 768px) {
   .contact-cards-modern {
     grid-template-columns: 1fr;
+    grid-template-rows: auto;
   }
   
   .contact-card-modern {
@@ -490,17 +491,6 @@ section{padding:6rem 0;position:relative}
   .contact-icon-modern {
     width: 40px;
     height: 40px;
-  }
-  
-  .fallback-links-modern {
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .fallback-link-modern {
-    width: 100%;
-    max-width: 200px;
-    justify-content: center;
   }
 }
 
@@ -1457,32 +1447,7 @@ section{padding:6rem 0;position:relative}
           </div>
         </div>
 
-        <div class="fallback-section-modern">
-          <p class="fallback-text">Prefer direct contact?</p>
-          <div class="fallback-links-modern">
-            <a href="mailto:sahilwalia2598@gmail.com?subject=Portfolio%20Inquiry&body=Hi%20Sahil,%0D%0A%0D%0AI'd%20like%20to%20discuss..." class="fallback-link-modern">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                <polyline points="22,6 12,13 2,6"></polyline>
-              </svg>
-              Email App
-            </a>
-            <a href="https://linkedin.com/in/sahilwalia1" target="_blank" rel="noopener noreferrer" class="fallback-link-modern">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-                <rect x="2" y="9" width="4" height="12"></rect>
-                <circle cx="4" cy="4" r="2"></circle>
-              </svg>
-              LinkedIn
-            </a>
-            <a href="https://github.com/sahilwalia15" target="_blank" rel="noopener noreferrer" class="fallback-link-modern">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
-              </svg>
-              GitHub
-            </a>
-          </div>
-        </div>
+       
       </div>
     </div>
   </div>
